# rmem

./: .clang-format  .gitignore  COPYRIGHT  Makefile  Makefile.am  README.md  autogen.sh  configure.ac
m4/: ac_local_lib.m4
make_arch/: crusher.mak  default.mak  info.mak
run/: crusher.sh  lucia.sh  lumi.sh  mlx.sh  perlmutter.sh
src/: Makefile.mk  dofi.h  dofi_rma.cu  gpu.cu  gpu.h  gpu.hip  main.c  ofi.cuh  ofi.h  ofi_config.c  ofi_config.h  ofi_init.c  ofi_p2p.c  ofi_progress.c  ofi_rma.c  ofi_rma_sig.c  ofi_rma_sync.c  ofi_rma_sync_tools.c  ofi_rma_sync_tools.h  ofi_thread.c  ofi_utils.c  ofi_utils.h  pmi_utils.c  pmi_utils.h  rmem.h  rmem_argp.h  rmem_profile.h  rmem_qlist.c  rmem_qlist.h  rmem_run.c  rmem_run.h  rmem_run_gpu.cu  rmem_run_gpu.h  rmem_run_gpu.hip  rmem_trigr.h  rmem_utils.c  rmem_utils.h  test.h
utils/: plot.py  tikz.py
